--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,26 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # Mevcut Versiyonu Kontrol Et ve Yeni Versiyon Belirle
+      - name: Get latest version tag from Docker Hub
+        id: versioning
+        run: |
+          # Docker Hub'dan mevcut etiketleri çek
+          latest_version=$(curl -s -u "${{ secrets.DOCKER_USERNAME }}:${{ secrets.DOCKER_PASSWORD }}" \
+            https://hub.docker.com/v2/repositories/your-dockerhub-username/helloworld-app/tags | \
+            jq -r '.results[].name' | grep -E '^v[0-9]+(\.[0-9]+)?$' | sort -V | tail -n 1)
+          
+          # Eğer bir etiket bulunamadıysa v1 olarak başlat
+          if [ -z "$latest_version" ]; then
+            new_version="v1"
+          else
+            # Versiyonu bir artır (örn: v1 -> v1.01)
+            new_version=$(echo $latest_version | awk -F. '{printf "v%d.%02d\n", $1, ($2+1)}')
+          fi
+
+          echo "New version: $new_version"
+          echo "new_version=$new_version" >> $GITHUB_ENV
+
       # Docker Build ve Push
       - name: Build and Push Docker image
         uses: docker/build-push-action@v4
@@ -30,4 +50,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ahmetgrbzz/helloworld-app:${{ github.event.inputs.version }}
+          tags: your-dockerhub-username/helloworld-app:${{ env.new_version }}
