--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,18 +28,26 @@ jobs:
         id: versioning
         run: |
           # Docker Hub'dan mevcut etiketleri çek
-          latest_version=$(curl -s -u "${{ secrets.DOCKER_USERNAME }}:${{ secrets.DOCKER_PASSWORD }}" \
-            https://hub.docker.com/v2/repositories/your-dockerhub-username/helloworld-app/tags | \
-            jq -r '.results[].name' | grep -E '^v[0-9]+(\.[0-9]+)?$' | sort -V | tail -n 1)
-          
-          # Eğer bir etiket bulunamadıysa v1 olarak başlat
-          if [ -z "$latest_version" ]; then
-            new_version="v1"
+          tags=$(curl -s -u "${{ secrets.DOCKER_USERNAME }}:${{ secrets.DOCKER_PASSWORD }}" \
+            https://hub.docker.com/v2/repositories/ahmetgrbzz/helloworld-app/tags | \
+            jq -r '.results[].name')
+
+          echo "Fetched tags: $tags"
+
+          # Eğer mevcut bir etiket yoksa v1 başlat
+          if [ -z "$tags" ]; then
+            new_version="v1.00"
           else
-            # Versiyonu bir artır (örn: v1 -> v1.01)
-            new_version=$(echo $latest_version | awk -F. '{printf "v%d.%02d\n", $1, ($2+1)}')
+            # En son versiyonu bul ve artır
+            latest_version=$(echo "$tags" | grep -E '^v[0-9]+(\.[0-9]+)?$' | sort -V | tail -n 1)
+            if [ -z "$latest_version" ]; then
+              new_version="v1.00"
+            else
+              new_version=$(echo $latest_version | awk -F. '{printf "v%d.%02d\n", $1, ($2+1)}')
+            fi
           fi
 
+          echo "Latest version: $latest_version"
           echo "New version: $new_version"
           echo "new_version=$new_version" >> $GITHUB_ENV
 
