--- a/.github/workflows/private.yml
+++ b/.github/workflows/private.yml
@@ -7,6 +7,7 @@ env:
   AWS_REGION: us-east-1                   # set this to your preferred AWS region, e.g. us-west-1
   PREFIX: tf-
   PROJECT_NAME: helloworld-app
+  ECR_REPOSITORY: ${{ env.PREFIX }}${{ env.PROJECT_NAME }}
 
 jobs:
   deploy:
@@ -33,9 +34,9 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Ensure ECR repository exists
-        run: |
-          aws ecr describe-repositories --repository-names "${{ env.ECR_REPOSITORY }}" >/dev/null 2>&1 \
-          || aws ecr create-repository --repository-name "${{ env.ECR_REPOSITORY }}" >/dev/null
+  run: |
+    aws ecr describe-repositories --repository-names "${{ env.ECR_REPOSITORY }}" >/dev/null 2>&1 \
+    || aws ecr create-repository --repository-name "${{ env.ECR_REPOSITORY }}" >/dev/null
 
       - name: Set short sha
         id: sha_short
