--- a/.github/workflows/private.yml
+++ b/.github/workflows/private.yml
@@ -34,9 +34,8 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Ensure ECR repository exists
-  run: |
-    aws ecr describe-repositories --repository-names "${{ env.ECR_REPOSITORY }}" >/dev/null 2>&1 \
-    || aws ecr create-repository --repository-name "${{ env.ECR_REPOSITORY }}" >/dev/null
+        run: |
+          aws ecr describe-repositories --repository-names "${{ env.ECR_REPOSITORY }}" >/dev/null 2>&1 \ || aws ecr create-repository --repository-name "${{ env.ECR_REPOSITORY }}" >/dev/null
 
       - name: Set short sha
         id: sha_short
