--- a/.github/workflows/private.yml
+++ b/.github/workflows/private.yml
@@ -7,7 +7,7 @@ env:
   AWS_REGION: us-east-1                   # set this to your preferred AWS region, e.g. us-west-1
   PREFIX: tf-
   PROJECT_NAME: helloworld-app
-  ECR_REPOSITORY: ${{ env.PREFIX }}${{ env.PROJECT_NAME }}
+  ECR_REPOSITORY: tf-helloworld-app
 
 jobs:
   deploy:
